--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "markket-react",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "license": "SEE LICENSE IN LICENSE",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
