Fixed ENV var names

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,8 +7,8 @@ on:
     branches: [ main ]
 
 env:
-  STRAPI_URL: ${{ secrets.STRAPI_URL }}
-  STORE_SLUG: ${{ secrets.STORE_SLUG }}
+  REACT_APP_STRAPI_URL: ${{ secrets.STRAPI_URL }}
+  REACT_APP_STORE_SLUG: ${{ secrets.STORE_SLUG }}
 
 jobs:
   build:
