--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-STRAPI_URL=https://api.markket.place
-STORE_SLUG=summit
+REACT_APP_STRAPI_URL=https://api.markket.place
+REACT_APP_STORE_SLUG=summit
