--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "embla-carousel-react": "^8.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-markdown": "^10.1.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
