--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "embla-carousel-react": "^8.5.2",
+    "posthog-js": "^1.231.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-markdown": "^10.1.0",
